<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csc.roman_fedorov.todolist.CreateNewTaskActivity">

    <TextView
        android:id="@+id/add_task_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title" />

    <EditText
        android:id="@+id/add_task_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_title_tv"
        android:inputType="text" />

    <TextView
        android:id="@+id/add_task_desc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_title_et"
        android:text="@string/add_task_desc" />

    <EditText
        android:id="@+id/add_task_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_desc_tv"
        android:inputType="text" />

    <TextView
        android:id="@+id/add_task_tags_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_desc_et"
        android:text="@string/add_task_tags" />

    <Button
        android:id="@+id/add_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/add_task_tags_tv"
        android:text="@string/add_tag" />

    <EditText
        android:id="@+id/add_task_tags_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_tags_tv"
        android:layout_toLeftOf="@id/add_tag_button"
        android:layout_toStartOf="@id/add_tag_button"
        android:inputType="text" />

    <TextView
        android:id="@+id/current_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_task_tags_et" />

    <CheckBox
        android:id="@+id/mark_as_favourite_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_tags"
        android:text="@string/mark_as_favourite_task" />

    <Button
        android:id="@+id/add_new_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mark_as_favourite_checkbox"
        android:text="@string/create_task_button" />
</RelativeLayout>
