<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csc.roman_fedorov.todolist.DetailTaskActivity">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title" />

    <EditText
        android:id="@+id/detail_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_desc" />

    <EditText
        android:id="@+id/detail_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <ListView
        android:id="@+id/tags_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/detail_button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update" />

</LinearLayout>
